<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/color_white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_large"
            app:layout_scrollFlags="scroll|enterAlways"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/medium_8"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_pressure1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/systolic_pressure"
            app:layout_constraintWidth_percent="0.45"
            android:textColorHint="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_sys_pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:inputType="numberDecimal"
                android:maxLength="3"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textview"
            style="@style/HeaderTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/layout_pressure1"
            app:layout_constraintBottom_toTopOf="@id/layout_pulse"
            app:layout_constraintHorizontal_bias="0.45"
            android:layout_marginStart="@dimen/medium_8"
            android:text="@string/divider"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_pressure2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.5"
            android:hint="@string/diastolic_pressure"
            android:textColorHint="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_dias_pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:inputType="numberDecimal"
                android:maxLength="3"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_8"
            android:id="@+id/layout_pulse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_pressure2"
            android:hint="@string/pulse"
            android:textColorHint="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_pulse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSave"
            app:layout_constraintTop_toBottomOf="@id/layout_pulse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorMyBlue"
            android:text="@string/save" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
